# alphagenome

./: .env.example  .gitignore  GETTING_STARTED.md  LICENSE  README.md  config.yaml  pyproject.toml  real_data_test.py  simple_test.py  test_setup.py
alphagenome_analytics/: __init__.py
alphagenome_analytics/analysis/: __init__.py  clinical.py  pathogenicity.py  population.py
alphagenome_analytics/core/: __init__.py  analyzer.py  batch_processor.py  data_manager.py
alphagenome_analytics/utils/: __init__.py  file_io.py  statistics.py  validation.py
alphagenome_analytics/visualization/: __init__.py  genomic_plots.py  interactive.py  statistical_plots.py
real_data_results/: genomic_variant_analysis_report.html  variant_analysis_results.json
scripts/: example_analysis.py
